--- a/index.css
+++ b/index.css
@@ -1,20 +1,110 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
-
+html, body {
+     margin: 0;
+    padding: 0;
+    }
 
 h1 {
-    font-style: 'Josefin Sans', arial;
+    font-family: 'Josefin Sans', arial;
+    text-transform: uppercase;
+    letter-spacing: 20px;
+    font-size: 80px;
+    max-width: 50%;
+    line-height: 110%;
+    font-weight: 600;
+}
+
+p {
+    font-size: 20px;
+    font-family: 'Josefin Sans', arial;
+    color: hsl(0, 36%, 70%);
+        max-width: 50%;
+    line-height: 160%;
+
 }
 
 
+span {
+    color: hsl(0, 36%, 70%);
+    font-weight: 300;
+    
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+}
+
+.input-wrapper {
+    position: relative;
+    display: inline-block;
+    width: 40%;
+}
+
+.input-wrapper input {
+    padding-right: 40px;
+}
+
+.input-wrapper button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: none;
+    background: linear-gradient(hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+    cursor: pointer;
+    height: 100%;
+    width: 90px;
+     border-radius: 25px;
+      transform: translateX(36%);
+    box-shadow: 0 15px 20px hsla(0, 36%, 70%, 0.4);
+}
+
+#email {
+    border: solid 1px hsl(0, 36%, 70%);
+    border-radius: 25px;
+    padding: 15px;
+    font-family: 'Josefin Sans', arial;
+    width: 100%;
+    font-size: 16px;
+    height: 20px;
+} 
+
+.logo {
+    width: 250px;
+    height: auto;
+    display: block;
+    object-fit: contain;
+    margin-bottom: 220px;
+}
+
+.product-image {
+    width: 100%;
+    object-fit: cover;
+    flex: 1;
+    display: block;
+}
+
+.error-message {
+    color: #FF746C;
+    font-weight: 400;
+}
+
+#email.input-error {
+  border: 1px solid hsl(0, 93%, 68%); 
+ 
+}
 
 
+.product-details {
+    padding: 50px 250px 250px 250px;
+    width: 100%;
+    margin-top: 50px;
+    background-image: url(images/bg-pattern-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+background-position: center;
+margin: 0;
+}
 
-
-/*Footer*/
-.attribution { font-size: 11px; 
-    text-align: 
-    center; }
-
-.attribution a { 
-    color: hsl(228, 45%, 44%); }
