--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ span {
 
 main {
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     height: 100vh;
 }
 
@@ -52,7 +52,7 @@ main {
     top: 0;
     right: 0;
     border: none;
-    background: linear-gradient(hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+    background: linear-gradient(90deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
     cursor: pointer;
     height: 100%;
     width: 90px;
@@ -104,7 +104,56 @@ main {
     background-image: url(images/bg-pattern-desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
-background-position: center;
-margin: 0;
+    background-position: center;
+    margin: 0;
 }
 
+
+/*Mobile querys*/
+@media (max-width: 600px) {
+    main {
+        flex-direction: column;
+        padding: 0;
+        display: bl;
+    }
+    .product-details {
+        padding: 50px 0px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        flex-direction: column;
+    }
+    .product-image {
+        width: auto;
+        max-height: 40%;
+        margin-bottom: 40px;
+         object-fit: cover;      /* keep same style */
+    object-position: center top;
+    }
+    .logo {
+    width: 180px;
+    height: auto;
+    margin-bottom: 0px;
+    }
+    h1 {
+    letter-spacing: 20px;
+    font-size: 50px;
+    }
+    h1, p {
+            max-width: 100%;
+    }
+    .input-wrapper {
+    display: inline-flex;
+    margin: 0 auto;
+    width: 120%;
+        right: 10%;
+
+}
+.input-wrapper button {
+    position: absolute;
+    top: 0;
+    right: 5%;
+    height: 100%;
+    width: 70px;
+}
+}
